# bubbleprofiler

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  BUGS.md  CMakeLists.txt  ChangeLog.md  INSTALL.md  README.md
cmake/: BubbleProfilerBuildOptions.cmake  BubbleProfilerConfig.cmake.in  BubbleProfilerGenerateConfig.cmake  CompilerWarnings.cmake  FindCLN.cmake  FindGSL.cmake  FindGiNaC.cmake  add_cxx_flag_if_supported.cmake  git_archive.cmake  set_cxx11.cmake
docs/: BubbleProfiler.bib  BubbleProfiler.tex  CMakeLists.txt  Doxyfile.in  JHEP.bst  Makefile  style.css
docs/figures/: fubini_potential.py  logarithmic_potential.py  plot_eff_potential.py  quartic_potential.py  shooting.py  thin_wall_potential.py
examples/: CMakeLists.txt  pyshooting.py
examples/gaussian/: CMakeLists.txt  gaussian_alpha_tests.py  gaussian_potential_test.cpp
examples/general-fubini/: CMakeLists.txt  general_fubini.cpp  generalized_fubini_observer.cpp  generalized_fubini_observer.hpp  generalized_fubini_potential.cpp  generalized_fubini_potential.hpp
examples/logarithmic/: CMakeLists.txt  logarithmic.cpp  logarithmic_observer.cpp  logarithmic_observer.hpp  logarithmic_potential.cpp  logarithmic_potential.hpp
examples/perturbative/: CMakeLists.txt  example_2field.sh.in  example_3field.sh.in  make_plots.py
examples/quartic/: CMakeLists.txt  action.cpp  make_shooting_plots.sh  plot_tabulate_results.py  tabulate.cpp
examples/scale/: CMakeLists.txt  scale.cpp
examples/sm-plus-singlet/: CMakeLists.txt  sm_plus_singlet.py.in  sm_plus_singlet_tn_plot.py
examples/textfile-ansatz/: AnsatzTab.csv  CMakeLists.txt  textfile_ansatz.sh.in
examples/thermal_potential_2d/: CMakeLists.txt  simple_2d_plots.cpp  simple_2d_potential.cpp  simple_2d_potential.hpp  thermal_potential.cpp
examples/thin-wall/: CMakeLists.txt  thin_wall.cpp  thin_wall_observer.cpp  thin_wall_observer.hpp  thin_wall_potential.cpp  thin_wall_potential.hpp
include/: action.hpp  algebraic_potential.hpp  basic_logger.hpp  bubbleprofiler_version.hpp.in  default_integration_policy.hpp  eigen_state_utils.hpp  error.hpp  euclidean_action.hpp  field_profiles.hpp  gaussian_potential.hpp  generic_perturbative_profiler.hpp  gsl_interpolator.hpp  gsl_root_finder.hpp  instream_profile_guesser.hpp  integration_policy.hpp  integration_utils.hpp  kink_profile_guesser.hpp  log_message.hpp  logging_manager.hpp  math_wrappers.hpp  nlopt_optimizer.hpp  numeric.hpp  observers.hpp  perturbations_ode_system.hpp  perturbative_profiler.hpp  potential.hpp  profile_convergence_tester.hpp  profile_guesser.hpp  raii_guard.hpp  relative_convergence_tester.hpp  restricted_quartic_potential.hpp  root_finder.hpp  rotation.hpp  shooting.hpp  shooting_profile_guesser.hpp  thermal_potential.hpp  univariate_interpolation.hpp
src/: action.cpp  algebraic_potential.cpp  basic_logger.cpp  euclidean_action.cpp  field_profiles.cpp  gaussian_potential.cpp  gsl_interpolator.cpp  instream_profile_guesser.cpp  integration_utils.cpp  kink_profile_guesser.cpp  log_message.cpp  logging_manager.cpp  nlopt_optimizer.cpp  numeric.cpp  observers.cpp  perturbations_ode_system.cpp  plotting_observer.cpp  relative_convergence_tester.cpp  restricted_quartic_potential.cpp  rotation.cpp  run_cmd_line_potential.cpp  shooting.cpp  shooting_profile_guesser.cpp  thermal_potential.cpp
test/: CMakeLists.txt  mock_potentials.cpp  mock_potentials.hpp  test_euclidean_action.cpp  test_field_profiles.cpp  test_gaussian_potential.cpp  test_instream_profile_guesser.cpp  test_kink_profile_guesser.cpp  test_perturbative_profiler_kink_ansatz.cpp  test_root_finders.cpp  test_rotation.cpp  test_spline_interpolation.cpp  test_undershoot_overshoot_profiler.cpp  test_univariate_interpolation.cpp
utils/dockerfiles/: README.md
utils/dockerfiles/bubbleprofiler-base-ubuntu-gcc/: Dockerfile
utils/dockerfiles/bubbleprofiler-ci-ubuntu-docs/: Dockerfile
utils/dockerfiles/bubbleprofiler-ci-ubuntu-gcc/: Dockerfile
