# custom target to build all examples
add_custom_target(examples)

add_subdirectory(gaussian)
add_subdirectory(general-fubini)
add_subdirectory(logarithmic)
add_subdirectory(perturbative)
add_subdirectory(quartic)
add_subdirectory(scale)
add_subdirectory(sm-plus-singlet)
add_subdirectory(textfile-ansatz)
add_subdirectory(thin-wall)
add_subdirectory(thermal_potential_2d)